# shared-memory

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shared_memory/: CMakeLists.txt
shared_memory/include/shared_memory/: error.hpp  shared_memory.hpp
shared_memory/src/: error.cpp  owned_fd.hpp  shared_memory.cpp
tests/: CMakeLists.txt  test_error.cpp  test_owned_fd.cpp  test_shared_memory.cpp
